loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: not found: value baisserBrosse
baisserBrosse()
^LoopStairs:7: error: not found: value doite
doite()
^